--- a/index.html
+++ b/index.html
@@ -40,32 +40,46 @@
       <h2>New Event</h2>
 
       <input id="eventTitleInput" placeholder="Event Title" />
+
+      <input list="meetingTypes" placeholder = "meeting Type" id="types" onfocus="this.value=''" onchange="this.blur();">
+
+      <datalist id="meetingTypes">
+        <option value="online">
+        <option value="live">
+        <option value="personal">
+        <option value="exam">
+        <option value="other">
+      </datalist>
+
       <input id="eventLocationName" placeholder="Event Location Name" />
       <input id="eventCityInput" placeholder="Event City Location" />
       <input id="eventCountryInput" placeholder="Event Country Location" />
-      <input
-        list="meetingTypes"
-        placeholder="Meeting Type"
-        id="types"
-        onfocus="this.value=''"
-        onchange="this.blur();"
-      />
 
-      <datalist id="meetingTypes">
-        <option value="online"></option>
-        <option value="live"></option>
-        <option value="personal"></option>
-        <option value="exam"></option>
-        <option value="other"></option>
-      </datalist>
+      <div id="map">
+        <div id="mapouter" class="mapouter">
+          <div id="gmap_canvas" class="gmap_canvas">
+            <iframe
+              id="iframe_id"
+              class="mapClass"
+              width="600"
+              height="500"
+              src=""
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+            >
+            </iframe>
+            <a href="https://www.embedgooglemap.net">google maps embed zoom</a>
+          </div>
+        </div>
+      </div>
 
       <input id="timePicker" type="time" />
 
       <button id="saveButton">Save</button>
       <button id="cancelButton">Cancel</button>
     </div>
-
-    
 
     <div id="modalBackDrop"></div>
 
